--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="telegram_color">#0088cc </color>
+    <color name="transparent">#00000000</color>
+    <color name="grey">#DADADA</color>
 </resources>
